--- a/What-we-do.html
+++ b/What-we-do.html
@@ -132,35 +132,37 @@
                                         <h2 class="solution-header">Our Solutions</h2>
                                         <!--Energy & Resources-->
                                         <div class="row">
-                                            <div class="col-xs-12 col-sm-4 col-md-4">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/teamwork2.png" class="solution-icon">
                                                 <p class="lead">Manage information and secure collaboration on Capital Projects, to deliver faster handover and commissioning of projects to full production.</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-4">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/check19.png" class="solution-icon">
                                                 <p class="lead">Achieve operational excellence, increased reliability and maximum production from your assets with Enterprise Asset Management or Well Lifecycle Management</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-4">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/homework.png" class="solution-icon">
                                                 <p class="lead">Ensure Compliance of your processes and information with strict health, safety and environment (HSE) and regulatory reporting requirements</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-4">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/sign20.png" class="solution-icon">
                                                 <p class="lead">Contract to deliver – effectively managing risk, renewals and scope changes across the entire value chain with Contract Management</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-4">
+                                            </div>
+                                            <div class="row">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/folder265.png" class="solution-icon">
                                                 <p class="lead">Manage concurrent revision control of specialized engineering documents and master data with Engineering Document Management and Document Control</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-4">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/data2.png" class="solution-icon">
                                                 <p class="lead">Simplify collaboration and secure Information Exchange (iX) with your stakeholders across the value chain and throughout the extended enterprise.</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-6">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/data45.png" class="solution-icon">
                                                 <p class="lead">Transform your business to the “big data” revolution and “digital oil field” to gain valuable business insight from your information.</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-6">
+                                            <div class="col-xs-12 col-sm-4 col-md-3">
                                                 <img src="images/ico/Energy_Resources/white/chart15.png" class="solution-icon">
                                                 <p class="lead">Demonstrate your brand’s commitment to Corporate Social Responsibility with improved stakeholder engagement and brand management</p>
                                             </div>
@@ -179,8 +181,10 @@
                                     </div>
                                     <!--SOLUTIONS-->
                                     <div class="center solution" style="background-image: url(images/busy_office.jpg)">
+                                        <div>
+                                        <h2 class="solution-header">Our Solutions</h2></div>
                                         <div class="container">
-                                        <h2 class="solution-header">Our Solutions</h2>
+                                            
                                         <!--Energy & Resources-->
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-4 col-md-4">
@@ -195,11 +199,13 @@
                                                 <img src="images/ico/Energy_Resources/white/sign20.png" class="solution-icon">
                                                 <p class="lead">Contract to deliver – effectively managing risk, renewals and scope changes across the entire supply chain with Contract Management</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-6">
+                                            </div>
+                                            <div class="row">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/folder265.png" class="solution-icon">
                                                 <p class="lead">Manage concurrent revision control of specialized engineering documents and master data with Engineering Document Management and Document Control</p>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-6">
+                                            <div class="col-xs-12 col-sm-4 col-md-4">
                                                 <img src="images/ico/Energy_Resources/white/data2.png" class="solution-icon">
                                                 <p class="lead">Simplify collaboration and secure Information Exchange with your stakeholders across the value chain and throughout the extended enterprise.</p>
                                             </div>
